--- a/exercicio2-l3/ex01.dproj
+++ b/exercicio2-l3/ex01.dproj
@@ -105,6 +105,7 @@
             <Form>frmPesquisa</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="uFiltro.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
